--- a/products/add-product.html
+++ b/products/add-product.html
@@ -113,9 +113,87 @@
       </div>
     </div>
     <div class="home-content">
-      <div class="flex justify-between items-center flex-row w-100">
-        <h2 class="text-third-color font-semibold text-[20px]"> إضافة منتج </h2>
-      </div>
+        <h2 class="text-third-color font-semibold text-[20px] w-100 block my-5"> إضافة منتج </h2>
+        <form action="" class="w-100">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> اسم المنتج </label>
+                        <input type="text" class="form-control text-third-color font-semibold text-[14px] h-[48px]" placeholder=" اسم المنتج ">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> السعر</label>
+                        <input type="number" class="form-control text-third-color font-semibold text-[14px] h-[48px]" placeholder=" السعر">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> الكمية</label>
+                        <input type="number" class="form-control text-third-color font-semibold text-[14px] h-[48px]" placeholder=" الكمية">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> SKU </label>
+                        <input type="text" class="form-control text-third-color font-semibold text-[14px] h-[48px]" placeholder=" SKU ">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <span for="" class="form-label text-third-color font-semibold text-[14px] mb-2"> صور المنتج </span>
+                <div class="file__zone d-flex justify-content-center align-items-center flex-column my-3 w-100" style="gap: 8px">
+                    <input class="form-control" type="file" id="formFile">
+                    <img src="../assets/images/down.svg" alt="download" loading="lazy" width="40" height="40">
+                    <span> اضغط او قم بالسحب </span>
+                    <p>png, jpg, jpeg (max. 800x400px)</p>
+                </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> وصف المنتج </label>
+                        <textarea type="text" class="form-control text-third-color font-semibold text-[14px] h-[48px]" placeholder=" وصف المنتج "></textarea>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> مقاس المنتج </label>
+                        <select
+                            name="class"
+                            id="class"
+                            class="form-select form-control h-[48px]"
+                            aria-label="Default select example"
+                            aria-placeholder="Segmentation*"
+                        >
+                            <option selected disabled>الحالة </option>
+                            <option value=""> مقاس 1 </option>
+                            <option value=""> مقاس 2 </option>
+                            <option value=""> مقاس 3  </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="d-flex justify-content-start align-items-start flex-column gap-1 mb-4">
+                        <label for="" class="text-third-color font-semibold text-[14px] mb-2"> لون المنتج </label>
+                        <select
+                            name="class"
+                            id="class"
+                            class="form-select form-control h-[48px]"
+                            aria-label="Default select example"
+                            aria-placeholder="Segmentation*"
+                        >
+                            <option selected disabled>لون المنتج  </option>
+                            <option value=""> لون 1 </option>
+                            <option value=""> لون 2  </option>
+                            <option value=""> لون 3  </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="flex justify-start items-start flex-row">
+                    <button type="submit" class="bg-primary-color text-[#fff] py-[8px] px-[15px] rounded-[6px] mt-4 w-[250px]"> إضافة </button>
+                </div>
+            </div>
+        </form>
     </div>
   </section>
 
