--- a/index.html
+++ b/index.html
@@ -15,114 +15,45 @@
 </head>
 
 <body>
-  <div  class="sidebar close">
-    <div class="header_sidebar">
-      <div class="logo-details">
-        <!-- <img src="./assets/images/logo-1.png" alt="logo" width="100" height="100"> -->
-         <h1 class="text-primary-color font-semibold text-[19px] ps-2"> LOGO </h1>
-      </div>
-      <button class="close_sidebar"> <img src="./assets/images/close.svg" alt="close"> </button>
+    <div class="auth__layout h-full pb-5">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="auth_layout_img bg-primary-color h-[100vh] w-full justify-center items-center flex-row hidden  lg:flex">
+                    <img src="./assets/images/add-cart.svg" alt="img" height="500" width="500" loading="lazy">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="auth__form bg-[#fff] sm:px-[40px] px-[20px]">
+                    <div class="form !bg-[#fff] border border-solid border-[#DDD8F9] rounded-lg py-[15px] sm:py-[20px] px-[12px] sm:px-[25px] mt-[35px]" style="box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);">
+                        <h2 class="text-third-color font-semibold text-[20px] flex justify-center items-center flex-row w-full mb-[35px]"> تسجيل الدخول 👋 </h2>
+                        <form action="">
+                            <div class="mb-3">
+                                <label for="" class="form-label text-third-color font-semibold text-[14px] mb-2"> البريد الألكتروني </label>
+                                <input type="email" class="form-control" id="" placeholder="البريد الألكتروني">
+                            </div>
+                            <div class="mb-3">
+                                <label for="" class="form-label text-third-color font-semibold text-[14px] mb-2"> كلمة المرور </label>
+                                <input type="password" class="form-control" id="" placeholder="كلمة المرور">
+                            </div>
+                            <div class="mb-3">
+                                <a href="./forget-password.html" class="text-primary-color font-medium text-[14px]"> هل نسيت كلمة المرور ؟  </a>
+                            </div>
+                            <div class="my-3">
+                                <!-- <button type="submit" class="w-full bg-primary-color text-white font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تسجيل الدخول </button> -->
+                                <a href="./home.html" class="flex justify-center items-center w-full bg-primary-color text-white font-semibold text-[17px] rounded-lg py-[12px] px-[20px]"> تسجيل الدخول </a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <ul class="nav-links">
-      <li class="active">
-        <a href="./index.html">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 18V15" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M10.07 2.81997L3.14002 8.36997C2.36002 8.98997 1.86002 10.3 2.03002 11.28L3.36002 19.24C3.60002 20.66 4.96002 21.81 6.40002 21.81H17.6C19.03 21.81 20.4 20.65 20.64 19.24L21.97 11.28C22.13 10.3 21.63 8.98997 20.86 8.36997L13.93 2.82997C12.86 1.96997 11.13 1.96997 10.07 2.81997Z" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>            
-          <span class="link_name">الرئيسية</span>
-        </a>
-        <div class="sub-menu blank">
-          <span><a class="link_name" href="./index.html">الرئيسية</a></span>
-        </div>
-      </li>
-
-      <li>
-        <a href="./orders/orders.html">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.4" d="M7.5 21.5H7.51M16.5 21.5H16.51M8 21.5C8 21.7761 7.77614 22 7.5 22C7.22386 22 7 21.7761 7 21.5C7 21.2239 7.22386 21 7.5 21C7.77614 21 8 21.2239 8 21.5ZM17 21.5C17 21.7761 16.7761 22 16.5 22C16.2239 22 16 21.7761 16 21.5C16 21.2239 16.2239 21 16.5 21C16.7761 21 17 21.2239 17 21.5Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M5.00014 14H18.1359C19.1487 14 19.6551 14 20.0582 13.8112C20.4134 13.6448 20.7118 13.3777 20.9163 13.0432C21.1485 12.6633 21.2044 12.16 21.3163 11.1534L21.9013 5.88835C21.9355 5.58088 21.9525 5.42715 21.9031 5.30816C21.8597 5.20366 21.7821 5.11697 21.683 5.06228C21.5702 5 21.4155 5 21.1062 5H4.50014M2 2H3.24844C3.51306 2 3.64537 2 3.74889 2.05032C3.84002 2.09463 3.91554 2.16557 3.96544 2.25376C4.02212 2.35394 4.03037 2.48599 4.04688 2.7501L4.95312 17.2499C4.96963 17.514 4.97788 17.6461 5.03456 17.7462C5.08446 17.8344 5.15998 17.9054 5.25111 17.9497C5.35463 18 5.48694 18 5.75156 18H19" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-          <span class="link_name">الطلبات</span>
-        </a>
-        <div class="sub-menu blank">
-          <span><a class="link_name" href="./orders/orders.html">الطلبات</a></span>
-        </div>
-      </li>
-      <li>
-        <a href="./products/products.html">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.4" d="M16 10C16 11.0609 15.5786 12.0783 14.8284 12.8284C14.0783 13.5786 13.0609 14 12 14C10.9391 14 9.92172 13.5786 9.17157 12.8284C8.42143 12.0783 8 11.0609 8 10" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M5.52 2.64L3.96 4.72C3.65102 5.13198 3.49652 5.33797 3.50011 5.51039C3.50323 5.66044 3.57358 5.80115 3.69175 5.89368C3.82754 6 4.08503 6 4.6 6H19.4C19.915 6 20.1725 6 20.3083 5.89368C20.4264 5.80115 20.4968 5.66044 20.4999 5.51039C20.5035 5.33797 20.349 5.13198 20.04 4.72L18.48 2.64M5.52 2.64C5.696 2.40533 5.784 2.288 5.89552 2.20338C5.9943 2.12842 6.10616 2.0725 6.22539 2.03845C6.36 2 6.50667 2 6.8 2H17.2C17.4933 2 17.64 2 17.7746 2.03845C17.8938 2.0725 18.0057 2.12842 18.1045 2.20338C18.216 2.288 18.304 2.40533 18.48 2.64M5.52 2.64L3.64 5.14666C3.40254 5.46328 3.28381 5.62159 3.1995 5.79592C3.12469 5.95062 3.07012 6.11431 3.03715 6.28296C3 6.47301 3 6.6709 3 7.06666L3 18.8C3 19.9201 3 20.4802 3.21799 20.908C3.40973 21.2843 3.71569 21.5903 4.09202 21.782C4.51984 22 5.07989 22 6.2 22L17.8 22C18.9201 22 19.4802 22 19.908 21.782C20.2843 21.5903 20.5903 21.2843 20.782 20.908C21 20.4802 21 19.9201 21 18.8V7.06667C21 6.6709 21 6.47301 20.9628 6.28296C20.9299 6.11431 20.8753 5.95062 20.8005 5.79592C20.7162 5.62159 20.5975 5.46328 20.36 5.14667L18.48 2.64" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-          <span class="link_name">المنتجات</span>
-        </a>
-        <div class="sub-menu blank">
-          <span><a class="link_name" href="./products/products.html">المنتجات</a></span>
-        </div>
-      </li>
-      <li>
-        <a href="./reviews/reviews.html">
-          <svg width="30" height="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.4" d="M3 7.8C3 6.11984 3 5.27976 3.32698 4.63803C3.6146 4.07354 4.07354 3.6146 4.63803 3.32698C5.27976 3 6.11984 3 7.8 3H16.2C17.8802 3 18.7202 3 19.362 3.32698C19.9265 3.6146 20.3854 4.07354 20.673 4.63803C21 5.27976 21 6.11984 21 7.8V13.2C21 14.8802 21 15.7202 20.673 16.362C20.3854 16.9265 19.9265 17.3854 19.362 17.673C18.7202 18 17.8802 18 16.2 18H13.6837C13.0597 18 12.7477 18 12.4492 18.0613C12.1844 18.1156 11.9282 18.2055 11.6875 18.3285C11.4162 18.4671 11.1725 18.662 10.6852 19.0518L8.29976 20.9602C7.88367 21.2931 7.67563 21.4595 7.50054 21.4597C7.34827 21.4599 7.20422 21.3906 7.10923 21.2716C7 21.1348 7 20.8684 7 20.3355V18C6.07003 18 5.60504 18 5.22354 17.8978C4.18827 17.6204 3.37962 16.8117 3.10222 15.7765C3 15.395 3 14.93 3 14V7.8Z" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M7 8.5H12M7 12H15" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-          <span class="link_name">التعليقات</span>
-        </a>
-        <div class="sub-menu blank">
-          <span><a class="link_name" href="./reviews/reviews.html">التعليقات</a></span>
-        </div>
-      </li>
-      <li>
-        <a href="./profile/profile.html">
-          <svg width="27" height="27" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18.0001 7.16C17.9401 7.15 17.8701 7.15 17.8101 7.16C16.4301 7.11 15.3301 5.98 15.3301 4.58C15.3301 3.15 16.4801 2 17.9101 2C19.3401 2 20.4901 3.16 20.4901 4.58C20.4801 5.98 19.3801 7.11 18.0001 7.16Z" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M16.9704 14.44C18.3404 14.67 19.8504 14.43 20.9104 13.72C22.3204 12.78 22.3204 11.24 20.9104 10.3C19.8404 9.59004 18.3104 9.35003 16.9404 9.59003" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M5.97047 7.16C6.03047 7.15 6.10047 7.15 6.16047 7.16C7.54047 7.11 8.64047 5.98 8.64047 4.58C8.64047 3.15 7.49047 2 6.06047 2C4.63047 2 3.48047 3.16 3.48047 4.58C3.49047 5.98 4.59047 7.11 5.97047 7.16Z" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M7.00043 14.44C5.63043 14.67 4.12043 14.43 3.06043 13.72C1.65043 12.78 1.65043 11.24 3.06043 10.3C4.13043 9.59004 5.66043 9.35003 7.03043 9.59003" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M12.0001 14.63C11.9401 14.62 11.8701 14.62 11.8101 14.63C10.4301 14.58 9.33008 13.45 9.33008 12.05C9.33008 10.62 10.4801 9.46997 11.9101 9.46997C13.3401 9.46997 14.4901 10.63 14.4901 12.05C14.4801 13.45 13.3801 14.59 12.0001 14.63Z" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            <path d="M9.08973 17.78C7.67973 18.72 7.67973 20.26 9.08973 21.2C10.6897 22.27 13.3097 22.27 14.9097 21.2C16.3197 20.26 16.3197 18.72 14.9097 17.78C13.3197 16.72 10.6897 16.72 9.08973 17.78Z" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>             
-          <span class="link_name">الحساب الشخصي</span>
-        </a>
-        <div class="sub-menu blank">
-          <span><a class="link_name" href="./profile/profile.html">الحساب الشخصي</a></span>
-        </div>
-      </li>
-    </ul>
-  </div>
-
-  <section class="home-section">
-    <div class="sidebar_header flex justify-between items-center flex-row w-100">
-      <div>
-        <img src="./assets/images/menu-03.svg" class="fi fi-br-refresh bx-menu menu_icon" alt="menu">
-      </div>
-      <div class="logo md:hidden block">
-        <a href="./index.html">
-          <img src="./assets/images/logo-1.png" alt="logo" width="70" height="70">
-        </a>
-      </div>
-      <div class="flex justify-start items-center flex-row gap-3">
-        <a href="./profile/profile.html">
-          <img src="./assets/images/profile.svg" alt="profile" width="30" height="30">
-        </a>
-        <a href="./notifications/notifications.html">
-          <img src="./assets/images/notification.svg" alt="notification" width="30" height="30">
-        </a>
-      </div>
-    </div>
-    <div class="home-content">
-      <span class="text"> Home </span>
-    </div>
-  </section>
-
-
-  <script src="./assets/js/jquery.js"></script>
-  <script src="./assets/js/bootstrap.min.js"></script>
-  <script src="./assets/js/datatable.js"></script>
-  <script src="./assets/js/all.min.js"></script>
-  <script src="./assets/js/main.js"></script>
+<script src="./assets/js/jquery.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/datatable.js"></script>
+<script src="./assets/js/all.min.js"></script>
+<script src="./assets/js/main.js"></script>
 </body>
 
 </html>
